--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
    */
@@ -184,7 +184,7 @@
    }
 
       .imagens4 {
-      
+       float: left;
       background-image: url("cal.png");
       width: 280px;
       height: 153px;
@@ -195,7 +195,7 @@
      position:relative;
      margin: 0 auto;
    margin-top: 55px;
-  
+   margin-left: 460px;
    }
 
   .hover {
@@ -267,7 +267,3 @@ font-weight: lighter;
   width: 170px;
 
 }
-
-
-
- 
