--- a/index.css
+++ b/index.css
@@ -54,151 +54,190 @@
    }
    .clear {
     clear:both;
-   }
+  }
 
-   .borda{
-      border: solid 10px #6aadfb;
-   }
+  .borda{
+    border: solid 10px #6aadfb;
+    max-width: 1450px;
+    width: 100%
+  }
 
-   .borda h1{
-      max-width: 1281px;
-       padding-top: 71px;
-       
-       width: 381px;
-       margin: 0 auto;
-       position: relative;
-      font-weight: bold;
-      font-size: 55px;
-      color: #fb4341;
-      font-family: Times;
-      letter-spacing:4px;
-      
-      
-   }
-   .borda h2 {
-      color: #676767;
-      line-height: 30px;
-      text-align: center;
-      font-weight: lighter;
-      font-family: helvetica;
-      padding:65px 264px 0 264px;
-      font-size: 22px
-   }
-  
-   .borda ul {
-      color: #666;
-      line-height: 25px;
-      text-align: center;
-      font-weight: lighter;
-      font-family: helvetica;
-      padding:5px 264px 0 264px;
-      font-size: 18px
-   }
-   .chuva {
-      background-image: url("ai.png");                                     
-      width: 100px;
-      height: 120px;
-      padding-top: 247px;
-      margin: 0 auto;
-       position: relative;
-     
-     background-repeat: no-repeat;
-     overflow: inherit;
-     background-position: center center;
-     background-size: 100%;
-   }
 
-   .mais h1 {
-      padding-top: 1px;
-      width: 164px;
-       margin: 0 auto;
-       position: relative;
-      font-weight: bold;
-      font-size: 38px;
-      color: #fb4341;
-      font-family: Times;
-      letter-spacing:4px;
-
-   }
-   .mais h4 {
-      color: #676767;
-       width: 160px;
-       padding-top: 20px;
-      font-weight: lighter;
-      font-family: helvetica;
-      margin: 0 auto;
-      position: relative;
-      font-size: 15px;
-
-   }
-.fotos {
-   width: 1200px;
-   height: 270px;
-   position: relative;
+  .apresentar h1 {
+   padding-top: 71px;
+   width: 100%;
    margin: 0 auto;
-    
+   position: relative;
+   font-weight: bold;
+   font-size: 55px;
+   color: #fb4341;
+   font-family: Times, sans-serif;
+   letter-spacing:4px;
+   text-align: center;
+
+
+ }
+ .apresentar h2 {
+  color: #676767;
+  line-height: 30px;
+  text-align: center;
+  font-weight: lighter;
+  font-family: helvetica;
+  margin: 50px 300px;
+  font-size: 22px
+}
+
+.apresentar ul {
+  color: #666;
+  line-height: 25px;
+  text-align: center;
+  font-weight: lighter;
+  font-family: helvetica;
+ position: relative;
+ margin: 20px 0 auto;
+  font-size: 18px
+}
+.chuva {
+  background-image: url("ai.png");                                     
+  width: 100px;
+  height: 120px;
+  padding-top: 247px;
+  margin: 0 auto;
+  position: relative;
+  background-repeat: no-repeat;
+  overflow: inherit;
+  background-position: center center;
+  background-size: 100%;
+}
+
+.mais h3 {
+  padding-top: 1px;
+  width: 100%;
+  margin: 0 auto;
+  position: relative;
+  font-weight: bold;
+  font-size: 38px;
+  color: #fb4341;
+  font-family: Times;
+  letter-spacing:4px;
+  text-align: center;
 
 }
-   .imagens {
-      background-image: url("maisuma.jpg.png");
-      width: 280px;
-      height: 153px;
-       background-repeat: no-repeat;
-     overflow: inherit;
-     background-position: center center;
-     background-size: 100%;
-     position: relative;
-    
-     margin-top: 55px;
-     margin-left: 140px;
-     float: left;
-   }
-   .imagens2 {
-      float: left;
-      background-image: url("realvi.jpg.png");
-      width: 280px;
-      height: 153px;
-       background-repeat: no-repeat;
-     overflow: inherit;
-     background-position: center center;
-     background-size: 100%;
-     position: relative;
-   
-     margin-top: 55px;
-     margin-left: 50px;
-    
-   }
+.mais h4 {
+  color: #676767;
+  width: 100%;
+  padding-top: 20px;
+  font-weight: lighter;
+  font-family: helvetica;
+  margin: 0 auto;
+  position: relative;
+  font-size: 15px;
+  text-align: center
 
-   .imagens3 {
-       float: left;
-      background-image: url("realcultura.jpg.png");
-      width: 280px;
-      height: 153px;
-       background-repeat: no-repeat;
-     overflow: inherit;
-     background-position: center center;
-     background-size: 100%;
-     position:relative;
-   margin-top: 55px;
-     margin-left: 50px;
-   }
+}
+.fotos {
+  max-width: 950px;
+ width: 100%;
+ position: relative;
+ margin: 0 auto;
 
-      .imagens4 {
-       float: left;
-      background-image: url("cal.png");
-      width: 280px;
-      height: 153px;
-       background-repeat: no-repeat;
-     overflow: inherit;
-     background-position: center center;
-     background-size: 100%;
-     position:relative;
-     margin: 0 auto;
-   margin-top: 55px;
-   margin-left: 460px;
-   }
 
-  .hover {
+}
+.imagens {
+  background-image: url("maisuma.jpg.png");
+  max-width: 280px;
+  width: 100%;
+  height: 153px;
+  background-repeat: no-repeat;
+  overflow: inherit;
+  background-position: center center;
+  background-size: 100%;
+  position: relative;
+  margin-top: 55px;
+  margin-right: 50px;
+  float: left;
+}
+.imagens2 {
+  float: left;
+  background-image: url("realvi.jpg.png");
+  max-width: 280px;
+  width: 100%;
+  height: 153px;
+  background-repeat: no-repeat;
+  overflow: inherit;
+  background-position: center center;
+  background-size: 100%;
+  position: relative;
+
+  margin-top: 55px;
+  margin-right: 50px;
+
+}
+
+.imagens3 {
+ float: left;
+ background-image: url("realcultura.jpg.png");
+ max-width: 280px;
+ width: 100%;
+ height: 153px;
+ background-repeat: no-repeat;
+ overflow: inherit;
+ background-position: center center;
+ background-size: 100%;
+ position:relative;
+ margin-top: 55px;
+
+}
+
+.imagens4 {
+ float: left;
+ background-image: url("cal.png");
+ max-width: 280px;
+ width: 100%;
+ height: 153px;
+ background-repeat: no-repeat;
+ overflow: inherit;
+ background-position: center center;
+ background-size: 100%;
+ position:relative;
+ margin: 0 auto;
+ margin-top: 55px;
+ margin-right: 50px
+ 
+}
+
+.imagens5 {
+  background-image: url("estudo.jpg");
+  max-width: 280px;
+  width: 100%;
+  height: 153px;
+  background-repeat: no-repeat;
+  overflow: inherit;
+  background-position: center center;
+  background-size: 100%;
+  position: relative;
+  margin-top:  55px;
+  margin-right: 50px;
+  float: left;
+}
+
+.imagens6 {
+ float: left;
+ background-image: url("template01.jpg");
+ max-width: 280px;
+ width: 100%;
+ height: 153px;
+ background-repeat: no-repeat;
+ overflow: inherit;
+ background-position: center center;
+ background-size: 100%;
+ position:relative;
+ margin-top: 55px;
+ 
+
+}
+
+.hover {
   position: absolute;
   top: 0;
   left: 0;
@@ -224,12 +263,20 @@
 .imagens4:hover .hover {
   display: block;
 }
+.imagens5:hover .hover {
+  display: block;
+}
+
+.imagens6:hover .hover {
+  display: block;
+}
+
 
 a {
 
   margin: 100px;
-text-decoration: none;
-font-family: helvetica;
+  text-decoration: none;
+  font-family: helvetica;
   z-index: 2;
   color: white;
   font-size: 18px;
@@ -239,23 +286,24 @@ font-family: helvetica;
   background-image: url("cha.jpg.png");
   width: 108px;
   height: 40px;
-padding-top:130px;
-      margin: 0 auto;
-       position: relative;
-       background-repeat: no-repeat;
-       background-position: center center;
-     background-size: 100%;
+  padding-top:130px;
+  margin: 0 auto;
+  position: relative;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 100%;
 }
 
-.email h2 {
+.email p {
   padding-top: 40px;
   
-      font-size: 20px;
-      color: #fb4341;
-      font-family: helvetica;
-      letter-spacing:4px;
-font-weight: lighter;
-      
+ text-align: center;
+  font-size: 20px;
+  color: #fb4341;
+  font-family: helvetica;
+  letter-spacing:4px;
+  font-weight: lighter;
+
 }
 .email h3 {
   padding-top: 40px;
@@ -267,3 +315,30 @@ font-weight: lighter;
   width: 170px;
 
 }
+.texto h3 {
+  margin: 55px;
+  text-align: center;
+}
+
+@media screen and (max-width: 980px) {
+
+      .apresentar h1 {
+        font-size: 30px;
+        margin-bottom: 20px; 
+      }
+      .apresentar h2  {
+        font-size: 12px;
+        margin: 10px;
+      }
+
+      .apresentar li {
+        font-size: 12px;
+        margin: 8px;
+      }
+
+      .borda {
+        padding: 100px;
+        margin: 0 auto;
+        position: relative;
+      }
+    }
