--- a/index.css
+++ b/index.css
@@ -144,7 +144,7 @@
 
 }
 .imagens {
-  background-image: url("template01.jpg");
+  background-image: url("memoria.png");
   max-width: 280px;
   width: 100%;
   height: 153px;
